[package]
name = "dkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0" }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-nonnative-field = { version = "0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-bls12-377 = { version = "^0.3.0", features = ["r1cs","curve"] }
ark-bw6-761 = { version = "^0.3.0" }
ark-groth16 = { version = "^0.3.0", features = ["r1cs"] }
ark-sponge = { version = "^0.3.0" , features = ["r1cs"] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"] }
ark-serialize = { version = "^0.3.0", default-features = false }
rayon = "^1.5.1"
json = "0.12.4"
lazy_static = "^1.4.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

[features]
default = [ "std", "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel" ]

[patch.crates-io]
#ark-groth16 = { git = "https://github.com/nikkolasg/groth16" }
#ark-crypto-primitives = { git = "https://github.com/nikkolasg/crypto-primitives" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/", rev = "a2a5ac491ae005ba2afd03fd21b7d3160d794a83"}
#ark-r1cs-std = { path = "../r1cs-std" }
ark-ec = { path = "../algebra/ec" }
ark-ff = { path = "../algebra/ff" }
ark-poly = { path = "../algebra/poly" }
ark-serialize = { path = "../algebra/serialize" }
